Cassandra completely added